--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Lincoln, NE"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/myncbi/ninaad.lasrado.1/bibliography/public/"
-  googlescholar    : "http://https://scholar.google.com/citations?hl=en&user=gIvpuKcAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=gIvpuKcAAAAJ&hl=en&oi=ao"
   email            : "ninaad@huskers.unl.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
