--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ninaad Lasrado"
-  avatar           : "Avatar.jpg"
+  avatar           : "Avatar.HEIC"
   bio              : "PhD student interested in vaccine development and single-cell immunogenomics"
   location         : "Lincoln, NE"
   employer         :
