--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Ninaad Lasrado"
 title_separator          : "-"
 name                     : &name "Ninaad Lasrado"
-description              : &description "PhD student in Viral Immunology at the University of Nebraska-Lincoln"
+description              : &description "Postdoctoral Research Fellow at Harvard Medical School"
 url                      : https://ninaadlasrado.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Ninaadlasrado/ninaadlasrado.github.io"
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Ninaad Lasrado"
   avatar           : "Avatar.jpg"
-  bio              : "PhD student interested in vaccine development and single-cell immunogenomics"
-  location         : "Lincoln, NE"
+  bio              : "Postdoctoral Research Fellow interested in development of next-gen mRNA vaccines against infectious diseases"
+  location         : "Boston, MA"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/myncbi/ninaad.lasrado.1/bibliography/public/"
   googlescholar    : "https://scholar.google.com/citations?user=gIvpuKcAAAAJ&hl=en&oi=ao"
-  email            : "ninaad@huskers.unl.edu"
+  email            : "nlasrado@bidmc.harvard.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "LasradoNinaad"
+  twitter          : "lasradoN"
   vine             :
   weibo            :
   xing             :
