--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   Instagram        : "https://www.instagram.com/ninaadlasrado/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/ninaad-lasrado-ph-d-000491154/"
+  linkedin         : "ninaad-lasrado-ph-d-000491154/"
   orcid            : "https://orcid.org/0000-0001-6762-2654"
   pinterest        :
   soundcloud       :
