--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "Ninaadlasrado"
+  github           : #"Ninaadlasrado"
   google_plus      :
   keybase          :
   Instagram        : "ninaadlasrado/"
