--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : #"Ninaadlasrado"
   google_plus      :
   keybase          :
-  Instagram        : #"ninaadlasrado"
+  Instagram        : "ninaadlasrado"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "ninaad-lasrado-ph-d-000491154/"
